# FastapiTemplate

./: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yaml  entrypoint-dev.sh  test.sh  test_postgres.sh
.github/workflows/: init.yaml
app/: .env.template  .gitignore  pyproject.toml
app/.github/agents/: Arch.agent.md  DataAndPersistence.agent(DynamoDB).md  DataAndPersistence.agent.md  DataAndPersistenceSpecialist (PostgreSQL).md  DomainAndLogic.agent.md
app/doc/: FastAPI Strict Guideline.md
app/docs/: Minimal Python Guideline (Restricted OOP).md  Serverless Mock API Generator 開発仕様書.md  handover_phase3_to_phase4.md  implementationPlan.md
app/scripts/: init_dynamodb.py  init_postgres.py
app/src/: config.py  dependencies.py  logging_config.yaml  main.py
app/src/domain/mocks/: exceptions.py  repository.py  router.py  schemas.py  services.py  template_engine.py
app/src/infrastructure/dynamodb/: client.py  converters.py  mock_repository.py
app/src/infrastructure/persistence/converters/: orm_to_domain.py
app/src/infrastructure/persistence/postgres/: database.py  models.py
app/src/infrastructure/persistence/postgres/repositories/: mock_repository.py
app/src/shared/: logging_utils.py  result.py
app/tests/domain/mocks/: test_services.py  test_template_engine.py
app/tests/integration/: test_api.py  test_api_dynamodb.py  test_api_postgres.py  test_dynamodb_repository.py  test_postgres_repository.py
tests/: test_deployed_api.sh
