[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "python-json-logger>=2.0.0",
    "pyyaml>=6.0.0",
    "boto3>=1.42.6",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]

[tool.ruff]
# ターゲットバージョン
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# 7.1 Ruff設定に基づくルールセットの有効化
select = [
    "F",        # Pyflakes: 論理エラーの検知
    "E", "W",   # pycodestyle: PEP8準拠 (Wは警告)
    "I",        # isort: インポート順序の整理 (ガイドライン6.xの整理に寄与)
    "N",        # pep8-naming: 命名規則 (ガイドライン6.2の強制)
    "B",        # flake8-bugbear: 潜在的なバグ (3.3 可変デフォルト引数 B006 等)
    "ANN",      # flake8-annotations: 型ヒントの強制 (4. 変数と型システム)
    "C4",       # flake8-comprehensions: 手続き的ループの禁止と内包表記の推奨 (3.1)
    "SIM",      # flake8-simplify: 構文の単純化
    "RET",      # flake8-return: 早期リターンの推奨
    "ARG",      # flake8-unused-arguments: 未使用引数の検知
    "TID",      # flake8-tidy-imports: インポートルールの強制
    "PLR",      # Pylint Refactor: 複雑なロジックの排除
    "ERA",      # eradicate: コメントアウトされたコードの禁止 (クリーンコード)
]

# 3.4 Any型の完全禁止 (デフォルトでは除外されているため明示的に追加)
extend-select = ["ANN401"]

# 7.1 複雑度の制限
[tool.ruff.lint.mccabe]
max-complexity = 10

# 3.2 三項演算子の厳格化 & 3.1 手続き的ループの禁止に関連
[tool.ruff.lint.pylint]
max-args = 5           # PLR0913: 引数過多の禁止
max-branches = 12      # 分岐が多すぎる場合の警告
max-returns = 6        # returnが多すぎる場合の警告
max-statements = 50    # 1関数の行数制限

# 3.4 Any型の禁止に対する例外 (外部ライブラリ等でどうしても必要な場合のみ)
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR", "ARG"]  # テストコードでは型ヒントや複雑度チェックを緩和

# ------------------------------------------------------------------------------

[tool.mypy]
# 7.2 Mypy設定 & 9. ツール設定
# 厳格モードの有効化
strict = true
python_version = "3.12"

# ガイドラインに基づく個別設定
disallow_any_generics = true      # ジェネリクスの型省略禁止 (リスト[Any]等を防ぐ)
warn_return_any = true            # Anyが返ることを警告 (3.4 Any禁止の補強)
no_implicit_optional = true       # 暗黙のNone許容を禁止 (4.3 Optionalの明示)
check_untyped_defs = true         # 型ヒントがない関数の中身もチェック
ignore_missing_imports = false    # 型定義がないライブラリをエラーにする

# FastAPI/Pydantic対応 (ガイドライン2.1, 3.1)
plugins = ["pydantic.mypy"]

# Pydanticモデルに対する厳格な型チェック設定
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
